* 补充Jenkins资料